# gerador_relatorio_kiro

./: .dockerignore  .env.example  .gitignore  2026-04-06_09-59-51_04_04_2026_dados_brutos_limpos_correcao_factual.csv  2026-04-06_13-38-17_answer_correctness_recalculado.csv  2026-04-06_16-29-41_resumo_factual_correctness(mode=f1).csv  2026-04-06_16-32-20_resumo_answer_correctness.csv  Dockerfile  Dockerfile_old  README.md  V2_resultado_500_perguntas_sisu_salesforce.xlsx  [INSPIRE M2] Resultados Preliminares Corretude Factual.txt  docker-compose.yml  easypanel.yml  main.py  package-lock.json  package.json  pyproject.toml  resultado_relatorio.md  start.sh  test_generate_report.py  teste_rep_01.md
.kiro/hooks/: activate-venv-before-run.kiro.hook  enforce-ptbr-agent-output.kiro.hook
apps/backend/: pyproject.toml  requirements-dev.txt  requirements.txt
apps/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: EXECUTIVE_SUMMARY.md  MODEL_SELECTION.md
docs/architecture/: ARCHITECTURE.md
docs/deployment/: EASYPANEL_DEPLOY.md
docs/examples/: model_selection_example.py
docs/homologation/: CHECKLIST.md
docs/security/: SECURITY.md
infra/docker/: Dockerfile.backend  Dockerfile.frontend
infra/easypanel/: nginx.conf  start.sh  supervisord.conf
reports/2026-04/: Relatório_da_Oficina_de_Onboarding_-_MDS__requirements_analysis__0615cc8a.csv  Relatório_da_Oficina_de_Onboarding_-_MDS__requirements_analysis__3f9de59d.docx  (+4 more)
scripts/: run-backend.sh  setup.sh  start.sh  test-docker.sh  test.sh
(+61 files in other folders)
